--- a/notebooks/image-classifier.ipynb
+++ b/notebooks/image-classifier.ipynb
@@ -93,10 +93,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 2: Configure the neural network\n",
+    "# Step 2: Configure all the neural network\n",
     "\n",
     "Now that we have our dataset, we need to set up a neural network for PyTorch. Our neural network will transform an image into a description."
    ]
