--- a/notebooks/IPL_PROJ1.ipynb
+++ b/notebooks/IPL_PROJ1.ipynb
@@ -479,7 +479,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_8263/1386064346.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.sum is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "/tmp/ipykernel_6828/1386064346.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.sum is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  total_scores_df = delivery_df.groupby(['ID','innings']).sum()['total_run'].reset_index()\n"
      ]
     }
@@ -2222,6 +2222,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "delivery_df['BattingTeam'] = delivery_df['BattingTeam'].str.replace('Delhi Daredevils','Delhi Capitals')\n",
+    "\n",
+    "delivery_df['BattingTeam'] = delivery_df['BattingTeam'].str.replace('Deccan Chargers','Sunrisers Hyderabad')\n",
+    "\n",
+    "delivery_df['BattingTeam'] = delivery_df['BattingTeam'].str.replace('Gujarat Lions','Gujarat Titans')\n",
+    "\n",
+    "delivery_df['BattingTeam'] = delivery_df['BattingTeam'].str.replace('Kings XI Punjab','Punjab Kings')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delivery_df = delivery_df[delivery_df['BattingTeam'].isin(teams)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def bowl(row):\n",
     "    if row['Team1'] == row['BattingTeam']:\n",
     "        return row['Team2']\n",
@@ -2231,7 +2255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2240,7 +2264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2626,7 +2650,7 @@
        "[204772 rows x 23 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2637,7 +2661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2646,7 +2670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -3032,7 +3056,7 @@
        "[98874 rows x 23 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3043,16 +3067,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_8263/3325906612.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.cumsum is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "/tmp/ipykernel_6828/3325906612.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.cumsum is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  delivery_df['current_score'] = delivery_df.groupby('ID').cumsum()['total_run_y']\n",
-      "/tmp/ipykernel_8263/3325906612.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_6828/3325906612.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3067,14 +3091,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_8263/585559466.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_6828/585559466.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3090,14 +3114,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_8263/1931403187.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_6828/1931403187.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3112,16 +3136,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_8263/1411168926.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.cumsum is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "/tmp/ipykernel_6828/1411168926.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.cumsum is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  wickets = delivery_df.groupby('ID').cumsum()['isWicketDelivery'].values\n",
-      "/tmp/ipykernel_8263/1411168926.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_6828/1411168926.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3137,14 +3161,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_8263/1251681764.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_6828/1251681764.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3160,14 +3184,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_8263/4238007078.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_6828/4238007078.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3183,7 +3207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3196,14 +3220,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_8263/2052643436.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_6828/2052643436.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3218,7 +3242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -3617,7 +3641,7 @@
        "[98874 rows x 30 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3628,7 +3652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3637,7 +3661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -3865,7 +3889,7 @@
        "[98874 rows x 10 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3876,7 +3900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3885,7 +3909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3923,16 +3947,16 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>154636</th>\n",
-       "      <td>Delhi Daredevils</td>\n",
-       "      <td>Punjab Kings</td>\n",
-       "      <td>Dharamsala</td>\n",
-       "      <td>79</td>\n",
-       "      <td>32</td>\n",
-       "      <td>5</td>\n",
-       "      <td>170</td>\n",
-       "      <td>6.272727</td>\n",
-       "      <td>14.8125</td>\n",
+       "      <th>45841</th>\n",
+       "      <td>Kolkata Knight Riders</td>\n",
+       "      <td>Mumbai Indians</td>\n",
+       "      <td>Abu Dhabi</td>\n",
+       "      <td>124</td>\n",
+       "      <td>54</td>\n",
+       "      <td>7</td>\n",
+       "      <td>195</td>\n",
+       "      <td>6.545455</td>\n",
+       "      <td>13.777778</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -3940,14 +3964,17 @@
        "</div>"
       ],
       "text/plain": [
-       "             BattingTeam   BowlingTeam        City  runs_left  balls_left  \\\n",
-       "154636  Delhi Daredevils  Punjab Kings  Dharamsala         79          32   \n",
+       "                 BattingTeam     BowlingTeam       City  runs_left  \\\n",
+       "45841  Kolkata Knight Riders  Mumbai Indians  Abu Dhabi        124   \n",
        "\n",
-       "        wickets  total_run_x  current_run_rate  required_run_rate  Result  \n",
-       "154636        5          170          6.272727            14.8125       0  "
+       "       balls_left  wickets  total_run_x  current_run_rate  required_run_rate  \\\n",
+       "45841          54        7          195          6.545455          13.777778   \n",
+       "\n",
+       "       Result  \n",
+       "45841       0  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3958,7 +3985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -3977,7 +4004,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3988,7 +4015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -4040,7 +4067,7 @@
        "      <td>165.404656</td>\n",
        "      <td>7.455195</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.419655</td>\n",
+       "      <td>0.531363</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
@@ -4050,7 +4077,7 @@
        "      <td>28.851342</td>\n",
        "      <td>2.262087</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.493505</td>\n",
+       "      <td>0.499018</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -4080,7 +4107,7 @@
        "      <td>165.000000</td>\n",
        "      <td>7.500000</td>\n",
        "      <td>8.921739e+00</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
@@ -4119,16 +4146,16 @@
        "\n",
        "       current_run_rate  required_run_rate        Result  \n",
        "count      98874.000000       9.886300e+04  98874.000000  \n",
-       "mean           7.455195                NaN      0.419655  \n",
-       "std            2.262087                NaN      0.493505  \n",
+       "mean           7.455195                NaN      0.531363  \n",
+       "std            2.262087                NaN      0.499018  \n",
        "min            0.000000               -inf      0.000000  \n",
        "25%            6.292683       7.200000e+00      0.000000  \n",
-       "50%            7.500000       8.921739e+00      0.000000  \n",
+       "50%            7.500000       8.921739e+00      1.000000  \n",
        "75%            8.700000       1.101221e+01      1.000000  \n",
        "max           36.000000                inf      1.000000  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4139,7 +4166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4148,7 +4175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -4200,7 +4227,7 @@
        "      <td>165.362376</td>\n",
        "      <td>7.453584</td>\n",
        "      <td>10.505325</td>\n",
-       "      <td>0.420726</td>\n",
+       "      <td>0.532706</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
@@ -4210,7 +4237,7 @@
        "      <td>28.857047</td>\n",
        "      <td>2.264681</td>\n",
        "      <td>14.109256</td>\n",
-       "      <td>0.493678</td>\n",
+       "      <td>0.498932</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -4240,7 +4267,7 @@
        "      <td>165.000000</td>\n",
        "      <td>7.500000</td>\n",
        "      <td>8.914286</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
@@ -4279,16 +4306,16 @@
        "\n",
        "       current_run_rate  required_run_rate        Result  \n",
        "count      98544.000000       98544.000000  98544.000000  \n",
-       "mean           7.453584          10.505325      0.420726  \n",
-       "std            2.264681          14.109256      0.493678  \n",
+       "mean           7.453584          10.505325      0.532706  \n",
+       "std            2.264681          14.109256      0.498932  \n",
        "min            0.000000        -516.000000      0.000000  \n",
        "25%            6.288462           7.200000      0.000000  \n",
-       "50%            7.500000           8.914286      0.000000  \n",
+       "50%            7.500000           8.914286      1.000000  \n",
        "75%            8.700000          10.986190      1.000000  \n",
        "max           36.000000         714.000000      1.000000  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4299,7 +4326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -4318,7 +4345,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4329,7 +4356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4338,7 +4365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -4357,7 +4384,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4368,7 +4395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -4377,7 +4404,7 @@
        "(92554, 10)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4388,7 +4415,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ultimate_df.to_csv('../data/IPL_dataset.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4398,7 +4434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4408,7 +4444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4423,7 +4459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4433,7 +4469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4445,7 +4481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -4489,7 +4525,7 @@
        "                ('step2', LogisticRegression(solver='liblinear'))])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4500,7 +4536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4509,16 +4545,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8672140889201015"
+       "0.8143266166063422"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4530,16 +4566,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.33598417, 0.66401583])"
+       "array([0.09266158, 0.90733842])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
