--- a/notebooks/IPL_PROJECT.ipynb
+++ b/notebooks/IPL_PROJECT.ipynb
@@ -4583,6 +4583,16 @@
    "source": [
     "pipe.predict_proba(X_test)[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(pipe,open('iplpipe.pkl','wb'))"
+   ]
   }
  ],
  "metadata": {
