--- a/notebooks/IPL_PROJECT_LR.ipynb
+++ b/notebooks/IPL_PROJECT_LR.ipynb
@@ -7,8 +7,16 @@
    "source": [
     "# IPL WINNER PROBABILITY PREDICTOR\n",
     "\n",
-    "#### This notebook contains the following:\n",
-    "- Data Manipulation"
+    "#### This notebook has been created to get the following data:\n",
+    "- Batting Team\n",
+    "- Bowling Team\n",
+    "- City\n",
+    "- Runs Left\n",
+    "- Balls Left\n",
+    "- Wickets Out\n",
+    "- Current Run Rate\n",
+    "- Required Run Rate\n",
+    "- Result (Winner)"
    ]
   },
   {
@@ -791,6 +799,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (4) Merge on Match_df"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -1220,6 +1236,14 @@
    ],
    "source": [
     "match_df"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (5) Sort the Teams"
    ]
   },
   {
@@ -2276,6 +2300,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Generating Bowling Team column"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -2695,6 +2727,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (6) Group by second innings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
@@ -3101,6 +3141,22 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (7) Generate required columns for prediction"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Current Score"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
@@ -3125,6 +3181,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Runs Left"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
@@ -3143,8 +3207,15 @@
     }
    ],
    "source": [
-    "#important because i added +1\n",
     "delivery_df['runs_left'] = delivery_df['total_run_x'] - delivery_df['current_score']+1"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Balls Left"
    ]
   },
   {
@@ -3195,6 +3266,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Current Run Rate"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
@@ -3218,6 +3297,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Required Run Rate"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
@@ -3238,6 +3325,14 @@
    "source": [
     "# required_run_rate = runs_left/overs_left\n",
     "delivery_df['required_run_rate'] = (delivery_df['runs_left']*6)/delivery_df['balls_left']"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Result (Winner)"
    ]
   },
   {
@@ -3686,6 +3781,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (8) Creating the required Dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
@@ -3931,6 +4034,14 @@
    ],
    "source": [
     "ultimate_df"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (9) Checking for anomalies"
    ]
   },
   {
