--- a/notebooks/IPL_PROJECT_LR.ipynb
+++ b/notebooks/IPL_PROJECT_LR.ipynb
@@ -5,7 +5,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# IPL WINNER PROBABILITY PREDICTOR\n",
+    "# IPL WINNER PROBABILITY PREDICTION PROJECT\n",
+    "\n",
+    "Dataset has been taken from Kaggle : https://www.kaggle.com/datasets/vora1011/ipl-2008-to-2021-all-match-dataset\n",
     "\n",
     "#### This notebook has been created to get the following data:\n",
     "- Batting Team\n",
@@ -658,6 +660,14 @@
    ],
    "source": [
     "total_scores_df"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Group by first innings to get total runs"
    ]
   },
   {
@@ -3241,6 +3251,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wickets Left"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
@@ -4569,6 +4587,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (10) Split the dataset into train and test datasets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
@@ -4589,6 +4615,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (11) One Hot Encoder"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
@@ -4601,6 +4635,14 @@
     "    ('trf',OneHotEncoder(sparse=False,drop='first'),['BattingTeam','BowlingTeam','City'])\n",
     "]\n",
     ",remainder='passthrough')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (12) Building the pipeline"
    ]
   },
   {
@@ -4690,6 +4732,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (13) Checking the accuracy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {},
@@ -4728,6 +4778,14 @@
    ],
    "source": [
     "pipe.predict_proba(X_test)[0]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (14) Send to pickle file"
    ]
   },
   {
