update readme and pkl file

--- a/notebooks/IPL_LR.ipynb
+++ b/notebooks/IPL_LR.ipynb
@@ -7,8 +7,6 @@
    "source": [
     "# IPL WINNER PROBABILITY PREDICTION PROJECT\n",
     "\n",
-    "Dataset has been taken from Kaggle : https://www.kaggle.com/datasets/vora1011/ipl-2008-to-2021-all-match-dataset\n",
-    "\n",
     "#### This notebook has been created to get the following data:\n",
     "- Batting Team\n",
     "- Bowling Team\n",
@@ -2852,31 +2850,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>107528</th>\n",
-       "      <td>Royal Challengers Bangalore</td>\n",
-       "      <td>Punjab Kings</td>\n",
-       "      <td>Bengaluru</td>\n",
-       "      <td>195</td>\n",
-       "      <td>112</td>\n",
-       "      <td>10</td>\n",
-       "      <td>198</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>10.446429</td>\n",
-       "      <td>0</td>\n",
+       "      <th>32072</th>\n",
+       "      <td>Delhi Capitals</td>\n",
+       "      <td>Chennai Super Kings</td>\n",
+       "      <td>Mumbai</td>\n",
+       "      <td>22</td>\n",
+       "      <td>20</td>\n",
+       "      <td>8</td>\n",
+       "      <td>188</td>\n",
+       "      <td>10.02</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        BattingTeam   BowlingTeam       City  runs_left  \\\n",
-       "107528  Royal Challengers Bangalore  Punjab Kings  Bengaluru        195   \n",
+       "          BattingTeam          BowlingTeam    City  runs_left  balls_left  \\\n",
+       "32072  Delhi Capitals  Chennai Super Kings  Mumbai         22          20   \n",
        "\n",
-       "        balls_left  wickets  target  current_run_rate  required_run_rate  \\\n",
-       "107528         112       10     198               3.0          10.446429   \n",
-       "\n",
-       "        Result  \n",
-       "107528       0  "
+       "       wickets  target  current_run_rate  required_run_rate  Result  \n",
+       "32072        8     188             10.02                6.6       1  "
       ]
      },
      "execution_count": 42,
@@ -3862,7 +3857,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8125710289360958"
+       "0.8124836087070548"
       ]
      },
      "execution_count": 55,
@@ -3883,7 +3878,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.1874289710639042\n"
+      "0.1875163912929452\n"
      ]
     }
    ],
@@ -3899,7 +3894,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0.30237214, 0.69762786])"
+       "array([0.54559065, 0.45440935])"
       ]
      },
      "execution_count": 57,
